--- a/uppgift1.html
+++ b/uppgift1.html
@@ -11,11 +11,7 @@
     </header>
 
 <main> <p class="kul">
-    Jag gillar att spela fotboll och gör detta i Norrhult där jag bor. Jag bor tillsamans med min mamma, pappa och syster i en vila.
-</p>
-<p class="kul">
-    På min fritid så spelar jag dator spel. Jag gillar att spela Fifa, Rocket League och då och då fps-spel.
-</p>
+ Jag gillar att spela fotboll och gör detta i Norrhult där jag bor. Jag bor tillsamans med min mamma, pappa och syster i en vila. På min fritid så spelar jag dator spel. <br>Jag gillar att spela Fifa, Rocket League och då och då fps-spel. </p class="kul">
 <h2>
     Teknik
 </h2>
